[gd_scene load_steps=11 format=2]

[ext_resource path="res://Font/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Cenas/final_Fase1/win_Screen.gd" type="Script" id=2]
[ext_resource path="res://Imagens/NPC/ana.png" type="Texture" id=3]
[ext_resource path="res://Font/MEGAMAN10.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Imagens/Menu/menu_item2.png" type="Texture" id=5]
[ext_resource path="res://Cenas/cena_Menu/cursor_Mouse.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 72
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Ana:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1500, 573 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "ana_fase1"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Ana:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1500, 573 ), Vector2( 1149.99, 573 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 92.0
margin_right = 1192.0
margin_bottom = 600.0
rect_min_size = Vector2( 1100, 600 )
custom_fonts/font = SubResource( 1 )
text = "Parabéns, Presidente!. Você terminou as questões da primeira fase, agora volte ao mapa e vá para as outras regiões do Brasil para continuar sua jornada (basta subir a rua principal até o fim)."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 422.0
margin_top = 523.0
margin_right = 820.0
margin_bottom = 603.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuItem2" type="Sprite" parent="Button"]
position = Vector2( 198.5, 42.125 )
scale = Vector2( 0.194516, 0.144677 )
texture = ExtResource( 5 )

[node name="Continue" type="Label" parent="Button"]
margin_left = 26.0
margin_top = 11.0
margin_right = 369.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 4 )
text = "AVANÇAR >>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ana" type="Sprite" parent="."]
position = Vector2( 1500, 573 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="win_1" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/ana_fase1 = SubResource( 3 )

[node name="cursor_Mouse" parent="." instance=ExtResource( 6 )]

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
